[package]
name = "netutils-cli"
version = "0.3.1"
edition = "2021"
description = "跨平台网络诊断工具集：接口、路由、出口、代理、Ping、DNS、Traceroute、端口扫描、连通性、连接列表、全链路诊断"
license = "MIT"
repository = "https://github.com/dreamsxin/netutils-cli"
keywords = ["network", "cli", "ping", "dns", "traceroute"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "netutils"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
unicode-width = "0.2"
tokio = { version = "1", features = ["full"] }
surge-ping = "0.8"
trust-dns-resolver = "0.23"
socket2 = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
once_cell = "1"
anyhow = "1"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
webpki-roots = "0.26"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.52", features = ["Win32_Globalization"] }
